[#14785] fix failing pipeline